# rust-pip

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  PROJECT_SETUPS.md  PyPi_communication.md  README.md  deny.toml  deny.yml  numpy.json  splits.vim
.github/: issue_template.md  pull_request_template.md
.github/workflows/: build.yml  docs.yml  format.yml  lint.yml  package.yml  rust.yml  tests.yml
guide/: book.toml
guide/book/: 404.html  contributing.html  index.html  installation.html  license.html  print.html  searchindex.js  searchindex.json  usage.html
guide/src/: SUMMARY.md
src/: main.rs  package_version.rs  pypi.rs  requirements.rs
src/requirements/: mod.rs  package_version.rs
test/: README.txt  requirements.txt
