[package]
name = "rust-pip"
version = "0.0.1"
edition = "2021"
description = "WORK IN PROGRESS: Pip rewritten in Rust"
authors = ["Jan Bronicki janbronicki@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/John15321/rust-pip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0.85"
pyver = { path = "../pyver" }

[dev-dependencies]
